NetLabel Tools CHANGELOG
==============================================================================

* Release X.XX (XXXXXX)
------------------------------------------------------------------------------
o Added support for address selectors
o Added support for the new CIPSO_V4_MAP_LOCAL CIPSO mapping type
o General code cleanups including style fixes
o Basic doxygen support ("make docs")

* Release 0.18 (June 25, 2008)
------------------------------------------------------------------------------
o Fixed some problems when printing CIPSOv4 and map information when not using
  the '-p' flag
o Always display an error message if an error occurred, based on patch from
  Klaus Weidner <klaus@atsec.com>
o Included a patch from Hagen Paul Pfeifer <pfeifer@netlab.nec.de> to fix a
  problem when building with LIBNL_VERSION >= 1006
o Only use size_t and not ssize_t to specify datum sizes/lengths
o Updated the netlabelctl man page with more text and examples
o Removed the RPM specfile which included all contributions by Steve Grubb
  <sgrubb@redhat.com>
o Updated copyright notice to GPLv2 only, received explicit approval from both
  Klaus Weidner <klaus@atsec.com> and
  Hagen Paul Pfeifer <pfeifer@netlab.nec.de>
o Updated the README
o Add libnl v 1.0-pre8 compatible code and make it the default (needed for
  Fedora Rawhide post F8)
o Renamed the CIPSOv4 'std' mapping to 'trans' to better reflect it's usage,
  'std' still works but is marked as deprecated
o Merged the 'static-label' branch which provides fallback/static labeling
  support
o Renamed the 'nlbl_mgmt_domain' structure to 'nlbl_dommap'
o Converted the the same tab/ident spacing as the Linux kernel
o Removed the structure typedefs in libnetlabel.h
o Added some crude documentation to the types defined in libnetlabel.h

* Release 0.17 (September 28, 2006)
------------------------------------------------------------------------------
o Changed to support the updated use of Netlink attributes by NetLabel