@@ -3,13 +3,13 @@
 #
 
 # release
-VERSION_RELEASE="X.XX"
+VERSION_RELEASE=X.XX
 
 # libnetlabel
-VERSION_LIBNETLABEL="X.XX"
+VERSION_LIBNETLABEL=X.XX
 
 # netlabelctl
-VERSION_NETLABELCTL="X.XX"
+VERSION_NETLABELCTL=X.XX
 
 # netlabeld
-VERSION_NETLABELD="X.XX"
+VERSION_NETLABELD=X.XX
